testsuite/tests/gadt/T14320.stderr

T14320.hs:17:14: error:
    GADT constructor type signature cannot contain nested ‘forall’s or contexts
    In the definition of data constructor ‘TEBad’
